--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
         <script src="./module/supplier-module.js"></script>
         <script src="./module/material-module.js"></script>
         <script src="./module/receiveupdate-module.js"></script>
+        <script src="./module/toword-module.js"></script>
     </head>
     <body>
         <div ng-controller="contentController as conCtrl" class="container-fluid">
