--- a/status.html
+++ b/status.html
@@ -1,5 +1,24 @@
 <div>
-    <a href="#/supplier" class="btn btn-primary">Supplier Data</a>
-    <a href="#/material" class="btn btn-primary">Material Data</a>
-    <a href="#/receive-material" class="btn btn-primary">Receive Material Data</a>    
+    <fieldset>
+        <legend>Common Services</legend>
+        <a href="#/supplier" class="btn btn-primary btn-lg">Supplier's Profile</a>
+        <a href="#/customer" class="btn btn-primary btn-lg">Customers's Profile</a>
+        <a href="#/material" class="btn btn-primary btn-lg">Material Data</a>    
+    </fieldset>
+    <br>
+    <fieldset>
+        <legend>Material Inflow</legend>
+        <a href="#/receive-material" class="btn btn-primary btn-lg">Received Material Data</a>    
+    </fieldset>
+    <br>
+    <fieldset>
+        <legend>Material Outflow</legend>
+        <a href="#/edit-invoice" class="btn btn-primary btn-lg">Edit Invoice</a>
+        <a href="#/reprint-invoice" class="btn btn-primary btn-lg">Reprint Invoice</a>
+    </fieldset>
+    <br>
+    <fieldset>
+        <legend>Stock Status</legend>
+    </fieldset>
+        
 </div>
