--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
         <script src="./module/material-module.js"></script>
         <script src="./module/receiveupdate-module.js"></script>
         <script src="./module/toword-module.js"></script>
+        <script src="./module/customer-module.js"></script>        
     </head>
     <body>
         <div ng-controller="contentController as conCtrl" class="container-fluid">
