Invoice Editing Final issue

--- a/sold.html
+++ b/sold.html
@@ -167,8 +167,8 @@
                         </div>
                         <div class="row">
                             <div class="col-md-2 col-md-offset-4">
-                                <button class="btn btn-primary" ng-click="soldCtrl.printestimate()">Print</button>
-                                <button class="btn btn-primary" ng-click="soldCtrl.reset()">Reset</button>                        
+                                <button class="btn btn-primary hidden-print" ng-click="soldCtrl.printestimate()">Print</button>
+                                <button class="btn btn-primary hidden-print" ng-click="soldCtrl.reset()">Reset</button>                        
                             </div>
                         </div>
                     </div>
@@ -255,8 +255,8 @@
                         </div>
                         <div class="row">
                             <div class="col-md-2 col-md-offset-4">
-                                <button class="btn btn-primary" ng-click="soldCtrl.saveinvoice()">Print & Save</button>
-                                <button class="btn btn-primary" ng-click="soldCtrl.reset()">Reset</button>                        
+                                <button class="btn btn-primary hidden-print" ng-click="soldCtrl.saveinvoice()">Print & Save</button>
+                                <button class="btn btn-primary hidden-print" ng-click="soldCtrl.reset()">Reset</button>                        
                             </div>
                         </div>
                     </div>
