--- a/status.html
+++ b/status.html
@@ -18,7 +18,9 @@
     </fieldset>
     <br>
     <fieldset>
-        <legend>Stock Status</legend>
+        <legend>Status</legend>
+        <a href="#/stock" class="btn btn-primary btn-lg">Stock Status</a>
+        <a href="#/invoices" class="btn btn-primary btn-lg">Invoices</a>
     </fieldset>
         
 </div>
